[package]
name = "protox"
description = "protox."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/protox"
documentation = "https://docs.rs/protox"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
    "!src/**/tests.rs",
    "protobuf/LICENSE",
    "protobuf/src/google/protobuf/any.proto",
    "protobuf/src/google/protobuf/api.proto",
    "protobuf/src/google/protobuf/descriptor.proto",
    "protobuf/src/google/protobuf/duration.proto",
    "protobuf/src/google/protobuf/empty.proto",
    "protobuf/src/google/protobuf/field_mask.proto",
    "protobuf/src/google/protobuf/source_context.proto",
    "protobuf/src/google/protobuf/struct.proto",
    "protobuf/src/google/protobuf/timestamp.proto",
    "protobuf/src/google/protobuf/type.proto",
    "protobuf/src/google/protobuf/wrappers.proto",
    "protobuf/src/google/protobuf/compiler/plugin.proto",
]

[[bin]]
name = "protox"
path = "src/main.rs"
required-features = ["bin"]

[features]
bin = ["dep:clap", "miette/fancy"]

[dependencies]
bytes = "1.1.0"
clap = { version = "3.2.6", features = ["derive"], optional = true }
logos = "0.12.0"
miette = "5.1.0"
once_cell = { version = "1.12.0", default_features = false }
prost = "0.10.4"
prost-types = "0.10.1"
thiserror = "1.0.31"

[dev-dependencies]
assert_fs = "1.0.7"
insta = "1.15.0"
proptest = "1.0.0"
prost-build = { version = "0.10.4", features = ["vendored"] }
prost-reflect = { version = "0.8.1", features = [
    "serde",
    "reflect-well-known-types"
] }
scopeguard = "1.1.0"
serde_yaml = "0.8.25"
similar-asserts = { version = "1.2.0", features = ["serde"] }
