[package]
name = "protox-parse"
description = "Parsing of protobuf source files"
keywords = ["protobuf", "serialization"]
categories = ["compilers", "encoding", "parser-implementations"]
version = "0.2.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/protox"
documentation = "https://docs.rs/protox-parse"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.61.0"

[dependencies]
logos = "0.12.0"
miette = "5.3.0"
prost-types = "0.11.0"
thiserror = "1.0.31"

[dev-dependencies]
insta = "1.15.0"
proptest = "1.0.0"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "html_root_url = \"https://docs.rs/protox-parse/[^/]*/\""
replace = "html_root_url = \"https://docs.rs/protox-parse/{{version}}/\""
exactly = 1

[package.metadata.release]
tag = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
