[package]
name = "protox-parse"
description = "Parsing of protobuf source files"
keywords = ["protobuf", "serialization"]
categories = ["compilers", "encoding", "parser-implementations"]
version = "0.4.1"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/protox"
documentation = "https://docs.rs/protox-parse"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.64.0"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
    "!src/**/tests.rs",
]

[dependencies]
logos = "0.13.0"
miette = "5.8.0"
prost-types = "0.11.0"
thiserror = "1.0.31"

[dev-dependencies]
insta = "1.15.0"
proptest = "1.0.0"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "html_root_url = \"https://docs.rs/protox-parse/[^/]*/\""
replace = "html_root_url = \"https://docs.rs/protox-parse/{{version}}/\""
exactly = 1

[package.metadata.release]
tag = false
pre-release-commit-message = "(cargo-release) {{crate_name}} version {{version}}"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
