[package]
name = "protox-parse"
description = "Parsing of protobuf source files"
keywords = ["protobuf", "serialization"]
categories = ["compilers", "encoding", "parser-implementations"]
version = "0.6.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/protox"
documentation = "https://docs.rs/protox-parse"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.70.0"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
    "!src/**/tests.rs",
]

[dependencies]
logos = "0.14.0"
miette = "7.2.0"
prost-types = "0.12.4"
thiserror = "1.0.59"

[dev-dependencies]
insta = "1.38.0"
proptest = "1.3.1"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "html_root_url = \"https://docs.rs/protox-parse/[^/]*/\""
replace = "html_root_url = \"https://docs.rs/protox-parse/{{version}}/\""
exactly = 1

[package.metadata.release]
tag = false
pre-release-commit-message = "(cargo-release) {{crate_name}} version {{version}}"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
