[package]
name = "protox"
description = "A rust implementation of the protobuf compiler."
keywords = ["protobuf", "serialization"]
categories = ["compilers", "encoding"]
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/protox"
documentation = "https://docs.rs/protox"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.61.0"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
    "!src/**/tests.rs",
    "protobuf/LICENSE",
    "protobuf/src/google/protobuf/any.proto",
    "protobuf/src/google/protobuf/api.proto",
    "protobuf/src/google/protobuf/descriptor.proto",
    "protobuf/src/google/protobuf/duration.proto",
    "protobuf/src/google/protobuf/empty.proto",
    "protobuf/src/google/protobuf/field_mask.proto",
    "protobuf/src/google/protobuf/source_context.proto",
    "protobuf/src/google/protobuf/struct.proto",
    "protobuf/src/google/protobuf/timestamp.proto",
    "protobuf/src/google/protobuf/type.proto",
    "protobuf/src/google/protobuf/wrappers.proto",
    "protobuf/src/google/protobuf/compiler/plugin.proto",
]

[[bin]]
name = "protox"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["parse"]
bin = ["dep:clap", "miette/fancy", "parse"]
parse = ["dep:logos"]

[dependencies]
bytes = "1.1.0"
clap = { version = "3.2.6", features = ["derive"], optional = true }
logos = { version = "0.12.0", optional = true }
miette = "5.1.0"
once_cell = { version = "1.12.0", default_features = false }
prost = "0.10.4"
prost-types = "0.10.1"
thiserror = "1.0.31"

[dev-dependencies]
assert_fs = "1.0.7"
insta = "1.15.0"
proptest = "1.0.0"
prost-build = { version = "0.10.4", features = ["vendored"] }
prost-reflect = { version = "0.8.1", features = [
    "serde",
    "reflect-well-known-types"
] }
scopeguard = "1.1.0"
serde_yaml = "0.8.25"
similar-asserts = { version = "1.2.0", features = ["serde"] }

[package.metadata.release]
tag-name = "{{version}}"
sign-tag = true
sign-commit = true

[[package.metadata.release.pre-release-replacements]]
file = "../README.md"
search = "https://deps\\.rs/crate/protox/[^/]*/status.svg"
replace = "https://deps.rs/crate/protox/{{version}}/status.svg"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../README.md"
search = "https://docs\\.rs/protox/[^/]*/protox"
replace = "https://docs.rs/protox/{{version}}/protox"
min = 0

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "html_root_url = \"https://docs.rs/protox/[^/]*/\""
replace = "html_root_url = \"https://docs.rs/protox/{{version}}/\""
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "## \\[Unreleased\\]"
replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[Unreleased\\]: https://github\\.com/andrewhickman/protox/compare/.*?...HEAD"
replace = "[Unreleased]: https://github.com/andrewhickman/protox/compare/{{version}}...HEAD\n[{{version}}]: https://github.com/andrewhickman/protox/compare/{{prev_version}}...{{version}}"
exactly = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
